# Eye_Movements_in_Repeated_Reading

./: .gitattributes  .pre-commit-config.yml  README.md  dropbox_access_token.txt  environment.yml  pyproject.toml
src/: calc_means_main.py  constants.py  global_eye_movement_measures.ipynb  individual_differences.ipynb  julia_linear_mm.py  process_IA_rep_for_reread_analysis.py  reread_preprocessing_utils.py  response_to_ling.py  response_to_linguistic_word_properties.ipynb
